--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon server.js",
     "seed:challenges": "node scripts/seedChallenges.js",
     "create:superadmin": "node scripts/createSuperAdmin.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -35,6 +36,7 @@
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
+    "eslint": "^9.39.1",
     "nodemon": "^3.0.1"
   }
 }
